--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -205,4 +205,18 @@ footer .subscribe-social .footer-social .social-links .link-con img {
   height: 60%;
   width: 100%;
 }
+
+.loading-overlay {
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.loading-overlay .spinner-con {
+  height: 10vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
 /*# sourceMappingURL=global.css.map */
