--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -185,3 +185,14 @@ footer {
         }
     }
 }
+.loading-overlay {
+    min-height: 100vh;
+    background-color: rgba(0,0,0,0.6);
+    .spinner-con {
+        height: 10vh;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
