--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -1,24 +1,21 @@
-.user-details {
-  min-height: 20vh;
+.shared-saved-listed {
+  min-height: 80vh;
+  background: #F7F7F7;
 }
 
-.user-details .image-con {
-  height: 10vh;
-  width: 10vh;
-  border-radius: 50%;
-  border: 1px solid grey;
+.shared-saved-listed .nav-item .nav-link {
+  background-color: inherit;
+  color: grey;
+  border-radius: 0px;
+  font-weight: 100;
 }
 
-.user-details .image-con img {
-  height: 60%;
-  width: 100%;
+.shared-saved-listed .nav-item .nav-link.active {
+  font-weight: bold;
+  border-bottom: 3px solid grey;
 }
 
-.user-details .data-con p {
-  font-size: 20px;
-}
-
-.user-details .data-con span {
-  font-size: 14px;
+.shared-saved-listed .projects-listed {
+  max-height: 65vh;
 }
 /*# sourceMappingURL=dashboard.css.map */
