--- a/public/styles/auth.scss
+++ b/public/styles/auth.scss
@@ -40,6 +40,7 @@
         .continue-email {
             font-size: 12px;
             text-decoration: underline;
+            cursor: pointer;
             &:hover {
                 color: black;
             }
