--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -309,6 +309,7 @@ footer {
 
     .project-details {
         .title-removefrom {
+            max-height: 10vh;
             span {
                 font-size: 10px;
                 cursor: pointer;
