--- a/public/styles/auth.scss
+++ b/public/styles/auth.scss
@@ -69,7 +69,7 @@
                 text-decoration: underline;
             }
         }
-        .instructions-sent {
+        .request-status {
             font-size: 12px;
         }
         .forgot-password-link {
