--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -268,6 +268,7 @@ footer {
         height: 10vh;
         width: 10vh;
         border-radius: 50%;
+        border: 1px solid lightgrey;
 
         img {
             border-radius: 50%;
