remade profile details

--- a/public/styles/profile-settings.css
+++ b/public/styles/profile-settings.css
@@ -41,7 +41,6 @@
 
 .settings-con .personal-settings {
   min-height: 100vh;
-  margin-left: 10vw;
   background: white;
 }
 
@@ -53,7 +52,6 @@
 
 .settings-con .change-password {
   min-height: 60vh;
-  margin-left: 10vw;
   background: white;
 }
 
@@ -65,7 +63,6 @@
 
 .settings-con .email-notifs {
   min-height: 40vh;
-  margin-left: 10vw;
   background: white;
 }
 
@@ -81,7 +78,6 @@
 
 .settings-con .delete-account {
   min-height: 30vh;
-  margin-left: 10vw;
   background: white;
 }
 
@@ -89,5 +85,20 @@
   .settings-con .delete-account {
     margin-left: 0px;
   }
+}
+
+.settings-con .profile-listed {
+  min-height: 100vh;
+  background: white;
+}
+
+@media (max-width: 767px) {
+  .settings-con .profile-listed {
+    margin-left: 0px;
+  }
+}
+
+.settings-con .profile-listed img {
+  border-radius: 50%;
 }
 /*# sourceMappingURL=profile-settings.css.map */
